# server

./: .gitignore  .gitmodules  .travis.yml  CLAUDE.md  CMakeLists.txt  Doxyfile.in  README.md  Rel20_Todo.md  appveyor.yml
dep/: ACE_Notes.md  CMakeLists.txt  README.md  g3dlite_Notes.txt
dep/ACE_wrappers/: CMakeLists.txt
dep/StormLib/: CMakeLists.txt
dep/StormLib/src/: SBaseCommon.cpp  SBaseFileTable.cpp  SFileAddFile.cpp  SFileFindFile.cpp  SFileListFile.cpp  SFileOpenArchive.cpp  SFileOpenFileEx.cpp  SFileReadFile.cpp  SFileVerify.cpp  StormCommon.h  StormLib.h  StormPort.h
dep/acelite/: CMakeLists.txt
dep/acelite/ace/: ACE.cpp  ACE.pc.in  ATM_Stream.cpp  Auto_IncDec_T.h  CDR_Base.cpp  CDR_Base.h  CDR_Base.inl  CDR_Stream.h  CMakeLists.txt  Caching_Strategies_T.cpp  Configuration.cpp  Connector.cpp  DLL.cpp  DLL.h  DLL_Manager.cpp  DLL_Manager.h  Default_Constants.h  Dev_Poll_Reactor.cpp  Event_Handler.cpp  Event_Handler.h  FILE_Addr.cpp  Get_Opt.cpp  Global_Macros.h  Guard_T.h  Handle_Set.cpp  Handle_Set.h  High_Res_Timer.cpp  IO_Cntl_Msg.inl  IO_SAP.cpp  IO_SAP.h  IPC_SAP.cpp  IPC_SAP.h  Local_Name_Space_T.cpp  Log_Msg.cpp  Log_Msg.h  Log_Msg.inl  MMAP_Memory_Pool.cpp  Map_Manager.h  Module.cpp  OS_Log_Msg_Attributes.h  (+66 more)
dep/bzip2/: CMakeLists.txt
dep/g3dlite/: CMakeLists.txt
dep/g3dlite/G3D/: AABox.cpp  AABox.h  Any.cpp  Any.h  AnyVal.cpp  AnyVal.h  AreaMemoryManager.cpp  AreaMemoryManager.h  Array.h  AtomicInt32.h  BinaryFormat.h  BinaryInput.cpp  BinaryInput.h  BinaryOutput.cpp  BinaryOutput.h  Box.cpp  Box.h  Box2D.cpp  Box2D.h  BumpMapPreprocess.h  Capsule.cpp  Capsule.h  CollisionDetection.cpp  CollisionDetection.h  Color1.h  Color1uint8.cpp  Color1uint8.h  Color3.cpp  Color3.h  Color3uint8.cpp  Color3uint8.h  Color4.cpp  Color4.h  Color4uint8.cpp  Color4uint8.h  Cone.h  ConvexPolyhedron.cpp  ConvexPolyhedron.h  CoordinateFrame.cpp  CoordinateFrame.h  (+157 more)
dep/gsoap/: CMakeLists.txt  soapC.cpp  soapH.h  soapServer.cpp  soapStub.h  stdsoap2.cpp  stdsoap2.h
dep/libmpq/: CMakeLists.txt
dep/libmpq/libmpq/: common.h  extract.c  mpq.c
dep/loadlib/: CMakeLists.txt  adt.cpp  adt.h  loadlib.cpp  loadlib.h  mpq.cpp  mpqfile.cpp  mpqfile.h  wdt.cpp
dep/loadlib/ml/: CMakeLists.txt  adt.cpp  adt.h  loadlib.cpp  loadlib.h  mpq.cpp  mpq.h  wdt.cpp  wdt.h
dep/loadlib/sl/: adt.h  loadlib.cpp  loadlib.h  mpq.cpp  mpq.h
dep/lualib/: CMakeLists.txt  lapi.h
dep/mersennetwister/: MersenneTwister.h
dep/openssl/: CMakeLists.txt
dep/recastnavigation/: CMakeLists.txt  Readme.txt
dep/recastnavigation/DebugUtils/: CMakeLists.txt
dep/recastnavigation/Detour/: CMakeLists.txt
dep/recastnavigation/Recast/: CMakeLists.txt
dep/recastnavigation/RecastDemo/: CMakeLists.txt
dep/src/: CMakeLists.txt
dep/src/bzip2/: CMakeLists.txt
dep/src/g3dlite/: CMakeLists.txt  FileSystem.cpp  uint128.cpp
dep/tomlib/: CMakeLists.txt
dep/tomlib/Crypt/: CMakeLists.txt
dep/tomlib/Math/: CMakeLists.txt
dep/utf8cpp/: CMakeLists.txt
dep/utf8cpp/doc/: ReleaseNotes
dep/utf8cpp/utf8/: core.h  unchecked.h
dep/zlib/: CMakeLists.txt
src/modules/SD3/: CMakeLists.txt  README.md  pch.cpp  pch.h  precompiled.cpp  precompiled.h
src/realmd/: .gitattributes  AuthCodes.h  AuthSocket.cpp  AuthSocket.h  BufferedSocket.cpp  BufferedSocket.h  CMakeLists.txt  Main.cpp  PatchHandler.cpp  PatchHandler.h  RealmList.cpp  RealmList.h  realmd.conf.dist.in  realmd.rc
src/realmd/Auth/: AuthCodes.h  AuthSocket.cpp  AuthSocket.h
src/realmd/Patch/: PatchHandler.cpp  PatchHandler.h
src/realmd/Realm/: RealmList.cpp  RealmList.h
src/realmd/SocketBuffer/: BufferedSocket.cpp  BufferedSocket.h
src/shared/: ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Common.h  Errors.h  Log.cpp  Log.h  PosixDaemon.cpp  ProgressBar.cpp  ProgressBar.h  SystemConfig.h.in  Threading.cpp  Threading.h  Util.cpp  Util.h  WorldPacket.h  revision.h  revision_data.h  revision_data.h.in  revision_sql.h
src/shared/Auth/: ARC4.cpp  AuthCrypt.cpp  AuthCrypt.h  BigNumber.cpp  BigNumber.h  HMACSHA1.cpp  HMACSHA1.h  Sha1.cpp  Sha1.h
src/shared/Common/: Common.cpp  Common.h  GitRevision.cpp  GitRevision.h
src/shared/Config/: Config.cpp  Config.h
src/shared/DataStores/: DB2FileLoader.cpp  DB2FileLoader.h  DB2Store.h  DBCFileLoader.cpp  DBCFileLoader.h  DBCStore.h
src/shared/Database/: DB2FileLoader.cpp  DB2FileLoader.h  DB2Store.h  DBCFileLoader.cpp  DBCFileLoader.h  DBCStore.h  Database.cpp  Database.h  DatabaseEnv.h  DatabaseImpl.h  DatabaseMysql.cpp  DatabaseMysql.h  DatabasePostgre.cpp  DatabasePostgre.h  Field.h  PGSQLDelayThread.h  QueryResult.h  QueryResultMysql.cpp  QueryResultMysql.h  QueryResultPostgre.cpp  QueryResultPostgre.h  SQLStorage.cpp  SQLStorage.h  SQLStorageImpl.h  SQLStorageReload.cpp  SQLStorageReload.h  SqlDelayThread.cpp  SqlDelayThread.h  SqlOperations.cpp  SqlOperations.h  SqlPreparedStatement.cpp  SqlPreparedStatement.h
src/shared/Dynamic/: ObjectRegistry.h
src/shared/GameSystem/: Grid.h  NGrid.h  TypeContainer.h  TypeContainerFunctions.h  TypeContainerVisitor.h
src/shared/LockedQueue/: LockedQueue.h
src/shared/Log/: Log.cpp  Log.h
src/shared/Platform/: CompilerDefs.h  Define.h
src/shared/Policies/: Singleton.h
src/shared/Threading/: DelayExecutor.cpp  DelayExecutor.h  Threading.cpp  Threading.h
src/shared/Utilities/: BinaryFunctions.h  (+16 more)
tests/: CMakeLists.txt  TestFramework.h  main.cpp  mock_client.py  test_AuraSystem.cpp  test_AuthTypes.cpp  test_BufferStress.cpp  test_ByteBuffer.cpp  test_ByteConverter.cpp  test_CataCombatFormulas.cpp  test_ChatParser.cpp  test_CombatFormulas.cpp  test_Common.cpp  test_DatabaseStress.cpp  test_EventProcessor.cpp  test_GameLogic.cpp  test_GameStress.cpp  test_GridSystem.cpp  test_InventorySystem.cpp  test_LootSystem.cpp  test_MovementSystem.cpp  test_NetworkStress.cpp  test_ObjectGuid.cpp  test_PlayerStats.cpp  test_SpellEffects.cpp  test_ThreatSystem.cpp  test_Timer.cpp  test_Util.cpp  test_WorldPacket.cpp  test_main.cpp  test_mariadb_stress.py  test_mock_client_db_exploits.py  test_sanity.cpp  test_security_hardening.py  test_server_stress.py
(+2324 files in other folders)
